hphp/test/quick/zend_closure_020.php.expectf
object(foo) (2) {
  ["test":"foo":private]=>
  int(3)
  ["a"]=>
  object(Closure%s) (0) {
  }
}
bool(true)
bool(true)

Fatal error: Cannot access private property foo::$test in %s on line 19
